fixed horizontal scrollbar

--- a/styles/base.less
+++ b/styles/base.less
@@ -44,6 +44,7 @@ atom-pane {
 
 ::-webkit-scrollbar {
     width: 7px;
+    height: 7px;
 }
 
 ::-webkit-scrollbar-track {
