--- a/styles/lists.less
+++ b/styles/lists.less
@@ -1,93 +1,100 @@
-
 // Lists
 // -------------------
-
 // Used in different places, like the Tree View, Commmand Palette etc.
 // Overrides: atom/static/lists.less
-
 // List Group -------------------
+
 .list-group {
-  li {
-    padding-left: @component-padding/2;
+    li {
+        padding-left: @component-padding/2;
+        // We want to highlight the background of the list items because we dont know their size.
+        &.selected {
+            color: @text-color-selected;
+            background-color: @background-color-selected;
 
-    // We want to highlight the background of the list items because we dont know their size.
-    &.selected {
-      color: @text-color-selected;
-      background-color: @background-color-selected;
-      &:before{ display: none; }
+            &:before {
+                display: none;
+            }
+        }
     }
-  }
 }
-
-
 // List Tree -------------------
+
 .list-tree {
-  color: @text-color;
-  .selected {
-    color: @text-color-selected;
-  }
+    color: @text-color;
+
+    .selected {
+        color: @text-color-selected;
+    }
 }
-
-
 // Select List -------------------
+
 .select-list {
-  li {
-    padding: @component-padding/2 @component-padding;
-  }
-  .status {
-    float: right;
-  }
+    li {
+        padding: @component-padding/2 @component-padding;
+    }
+
+    .status {
+        float: right;
+    }
 }
-
-
 // Popover List -------------------
 // Used as a popover for something like autocomplete.
+
 .select-list.popover-list {
-  @popover-list-padding: @component-padding/2;
+    @popover-list-padding: @component-padding/2;
+    padding: @popover-list-padding;
+    border-radius: @component-border-radius;
+    background-color: @overlay-background-color;
+    box-shadow: 0 2px 8px 1px hsla(0,0%,0%,.3);
 
-  padding: @popover-list-padding;
-  border-radius: @component-border-radius;
-  background-color: @overlay-background-color;
-  box-shadow: 0 2px 8px 1px hsla(0,0%,0%,.3);
+    .list-group {
+        margin-top: @popover-list-padding;
 
-  .list-group {
-    margin-top: @popover-list-padding;
+        li {
+            padding-left: @popover-list-padding;
+        }
+    }
+}
+
+.input-checkbox,
+.input-radio,
+.input-range,
+.input-toggle {
+    background-color: rgb(255, 0, 84);
+}
+
+.highlight-error,
+.highlight-info,
+.highlight-success,
+.highlight-warning {
+    color: white !important;
+}
+
+.icon-search {
+    overflow: visible !important;
+}
+
+.select-list {
     li {
-      padding-left: @popover-list-padding;
+        &.selected {
+            transition: 0.5s;
+            color: white !important;
+            background-position: 20rem;
+            background: linear-gradient(65deg, rgba(255, 32, 119, 1) 0%, rgba(255,0,0,1) 50%, rgba(255, 32, 119, 1) 100%);
+
+            span {
+                color: white !important;
+            }
+
+            .icon {
+                color: white !important;
+            }
+        }
     }
-  }
 }
 
-.input-checkbox, .input-toggle, .input-radio, .input-range{
-  background-color: rgb(255, 0, 84);
-}
-
-.highlight-info, .highlight-success, .highlight-warning, .highlight-error{
-  color:white !important;
-}
-
-.icon-search{
-  overflow:visible !important;
-}
-
-.select-list{
-  li{
-    &.selected{
-      transition:0.5s;
-      color:white !important;
-      background-position:20rem;
-       background: linear-gradient(65deg, rgba(255, 32, 119, 1) 0%, rgba(255,0,0,1) 50%, rgba(255, 32, 119, 1) 100%);
-       span{
-         color:white !important;
-       }
-       .icon{
-         color:white !important;
-       }
-    }
-  }
-}
-
-select{
+select {
     background-color: white !important;
-    color:red !important;
+    color: red !important;
 }
