--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -14,6 +14,12 @@
     .file {
         transition: 0.5s;
 
+        &:hover{
+            transition: 0.2s;
+            // cursor: pointer;
+            color: blue;
+        }
+
         .icon::before {
             color: red;
         }
